AC_INIT(configure.in)
AM_INIT_AUTOMAKE(media-encoding-cluster, 0.1)
AM_CONFIG_HEADER(config.h)
#AM_PATH_CPPUNIT(1.10.2)
#AC_CONFIG_HEADERS(config.h)

#AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL


AC_ARG_WITH(ffmpeg, [  --with-ffmpeg=path   where ffmpeg is installed. (Standard is "/usr/local")],
	    FFMPEG_CFLAGS="-I$withval/include/ffmpeg"
	    FFMPEG_LD="-L$withval/lib -lavformat -lavcodec -lavutil"
	    FFMPEG_PATH="$withval")

CPPFLAGS="$CPPFLAGS $FFMPEG_CFLAGS"

AC_ARG_WITH(boost, [  --with-boost=path   where boost is installed. (Standard is "/usr/local")],
	    BOOST_CFLAGS="-I$withval/include/boost-1_34_1"
	    BOOST_LD="-L$withval/lib"
	    BOOST_PATH="$withval")

CPPFLAGS="$CPPFLAGS $BOOST_CFLAGS"
LDFLAGS="$LDFLAGS $BOOST_LD"


AC_ARG_WITH(amq, [  --with-amq=path   where activemq is installed. (Standard is "/usr/local")],
	    AMQ_CFLAGS="-I$withval/include/activemq-cpp-2.0"
	    AMQ_LD="-L$withval/lib -lactivemq-cpp"
	    AMQ_PATH="$withval")

CPPFLAGS="$CPPFLAGS $AMQ_CFLAGS"
LDFLAGS="$LDFLAGS $AMQ_LD"
# moved up to comply with standard autoconf layout 
# http://www.gnu.org/software/autoconf/manual/autoconf-2.57/html_mono/autoconf.html#SEC10
AC_CHECK_LIB(avcodec, av_free)
AC_CHECK_LIB(avformat, av_free)
AC_CHECK_LIB(avutil, av_free)
AC_CHECK_LIB(pthread, main)
AC_CHECK_HEADERS([pthread.h])

AC_CHECK_HEADERS([avcodec.h avformat.h],
                [AC_DEFINE([HAVE_AVCODEC_H])],
                [AC_MSG_ERROR([
*********************************************************************
Sorry, no avcodec.h or avformat.h found,
you need to install ffmpeg Library with development headers from
http://ffmpeg.mplayerhq.hu
*********************************************************************
])])

# check for bzip2 development headers
#AC_CHECK_HEADERS([bzlib.h],
#                [AC_DEFINE([HAVE_BZLIB_H])],
#                [AC_MSG_ERROR([
#*********************************************************************
#Sorry, bzlib.h not found. you need to install bzip2 library with
#development headers.
#*********************************************************************
#])])

CXXFLAGS="$CPPFLAGS $FFMPEG_CFLAGS -D__STDC_CONSTANT_MACROS -Wall -Wno-switch  -D_LARGEFILE_SOURCE -D_GNU_SOURCE -g -O0"
#LDFLAGS="$LDFLAGS $FFMPEG_LD -lsqlite3 -lbz2 -lz -L/usr/lib/mysql -lmysqlclient"
LDFLAGS="$LDFLAGS $FFMPEG_LD -lz -lpthread -lboost_serialization-gcc40 -lboost_signals -lsqlite3 "

AC_OUTPUT(
    Makefile 
    src/Makefile 
    src/org/Makefile
    src/org/esb/Makefile
    src/org/esb/lang/Makefile
    src/org/esb/util/Makefile
    src/org/esb/io/Makefile
    src/org/esb/av/Makefile
    src/org/esb/net/Makefile
    src/org/esb/hive/Makefile
    src/org/esb/sql/Makefile
    src/hive.client/Makefile 
dnl    test/Makefile
dnl    src/org/esb/hivecontrol/Makefile
dnl    src/framehive/Makefile     
dnl    src/hive.listener/Makefile 
dnl    src/hive.server/Makefile 
dnl    src/org/esb/lang/Makefile
dnl    src/org/esb/socket/Makefile
dnl    src/org/esb/config/Makefile
dnl    src/org/esb/config/Makefile
    )
