AC_INIT(configure.in)
AM_INIT_AUTOMAKE(media-encoding-cluster, 0.1)
AM_CONFIG_HEADER(config.h)
#AM_PATH_CPPUNIT(1.10.2)
#AC_CONFIG_HEADERS(config.h)

#AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL


AC_ARG_WITH(ffmpeg, [  --with-ffmpeg=path   where ffmpeg is installed. (Standard is "/usr/local")],
	    FFMPEG_CFLAGS="-I$withval/include/ffmpeg"
	    FFMPEG_LD="-L$withval/lib -lavformat -lavcodec -lavutil"
	    FFMPEG_PATH="$withval")

CPPFLAGS="$CPPFLAGS $FFMPEG_CFLAGS"

AC_ARG_WITH(boost-lib, [  --with-boost-lib=path where boost libraries are installed. ],
	    BOOST_LD="-L$withval")

LDFLAGS="$LDFLAGS $BOOST_LD"
AC_ARG_WITH(boost-inc, [  --with-boost-inc=path where boost headers are installed.],
	    BOOST_CFLAGS="-I$withval")

CPPFLAGS="$CPPFLAGS $BOOST_CFLAGS"

AC_ARG_WITH(litesql, [  --with-litesql=path   where litesql is installed. (Standard is "/usr/local")],
	    LITESQL_CFLAGS="-I$withval/include"
	    LITESQL_LD="-L$withval/lib"
	    LITESQL_PATH="$withval")

CPPFLAGS="$CPPFLAGS $LITESQL_CFLAGS"
LDFLAGS="$LDFLAGS $LITESQL_LD"


AC_ARG_WITH(amq, [  --with-amq=path   where activemq is installed. (Standard is "/usr/local")],
	    AMQ_CFLAGS="-I$withval/include/activemq-cpp-2.0"
	    AMQ_LD="-L$withval/lib -lactivemq-cpp"
	    AMQ_PATH="$withval")

CPPFLAGS="$CPPFLAGS $AMQ_CFLAGS"
LDFLAGS="$LDFLAGS $AMQ_LD"

AC_ARG_WITH(tntnet, [  --with-tntnet=path   where tntnet is installed. (Standard is "/usr/local")],
	    TNTNET_CFLAGS="-I$withval/include"
	    TNTNET_LD="-L$withval/lib -ltntnet"
	    TNTNET_PATH="$withval")

CPPFLAGS="$CPPFLAGS $TNTNET_CFLAGS"
LDFLAGS="$LDFLAGS $TNTNET_LD"

AC_ARG_WITH(tnttools, [  --with-tnttools=path   where tnt cxxtools is installed. (Standard is "/usr/local")],
	    TNTTOOLS_CFLAGS="-I$withval/include"
	    TNTTOOLS_LD="-L$withval/lib -ltntnet"
	    TNTTOOLS_PATH="$withval")

CPPFLAGS="$CPPFLAGS $TNTTOOLS_CFLAGS"
LDFLAGS="$LDFLAGS $TNTTOOLS_LD"

AC_ARG_WITH(sqlite, [  --with-sqlite=path   where sqlite is installed. (Standard is "/usr/local")],
	    sqlite_CFLAGS="-I$withval/include"
	    sqlite_LD="-L$withval/lib -lsqlite3"
	    sqlite_PATH="$withval")

CPPFLAGS="$CPPFLAGS $sqlite_CFLAGS"
LDFLAGS="$LDFLAGS $sqlite_LD"

# moved up to comply with standard autoconf layout 
# http://www.gnu.org/software/autoconf/manual/autoconf-2.57/html_mono/autoconf.html#SEC10
AC_CHECK_LIB(avcodec, av_free)
AC_CHECK_LIB(avformat, av_free)
AC_CHECK_LIB(avutil, av_free)
AC_CHECK_LIB(pthread, main)
AC_CHECK_HEADERS([pthread.h])

AC_CHECK_HEADERS([avcodec.h avformat.h],
                [AC_DEFINE([HAVE_AVCODEC_H])],
                [AC_MSG_ERROR([
*********************************************************************
Sorry, no avcodec.h or avformat.h found,
you need to install ffmpeg Library with development headers from
http://ffmpeg.mplayerhq.hu
*********************************************************************
])])

# check for bzip2 development headers
#AC_CHECK_HEADERS([bzlib.h],
#                [AC_DEFINE([HAVE_BZLIB_H])],
#                [AC_MSG_ERROR([
#*********************************************************************
#Sorry, bzlib.h not found. you need to install bzip2 library with
#development headers.
#*********************************************************************
#])])

CXXFLAGS="$CPPFLAGS $FFMPEG_CFLAGS -D__STDC_CONSTANT_MACROS -Wall -Wno-switch  -D_LARGEFILE_SOURCE -D_GNU_SOURCE -g -O0"
#LDFLAGS="$LDFLAGS $FFMPEG_LD -lsqlite3 -lbz2 -lz -L/usr/lib/mysql -lmysqlclient"
LDFLAGS="$LDFLAGS $FFMPEG_LD -lpthread -lboost_serialization -lboost_signals -lsqlite3 -lboost_thread-mt -L/usr/lib/mysql -lmysqlclient"

AC_OUTPUT(
    Makefile 
    src/Makefile 
    src/org/Makefile
    src/org/esb/Makefile
    src/org/esb/lang/Makefile
    src/org/esb/util/Makefile
    src/org/esb/io/Makefile
    src/org/esb/av/Makefile
    src/org/esb/net/Makefile
    src/org/esb/hive/Makefile
    src/org/esb/httpd/Makefile
    src/org/esb/web/Makefile
    src/org/esb/sql/Makefile
    test/Makefile
dnl    src/hive.client/Makefile 
dnl    src/org/esb/hivecontrol/Makefile
dnl    src/framehive/Makefile     
dnl    src/hive.listener/Makefile 
dnl    src/hive.server/Makefile 
dnl    src/org/esb/lang/Makefile
dnl    src/org/esb/socket/Makefile
dnl    src/org/esb/config/Makefile
dnl    src/org/esb/config/Makefile
    )
